--- a/android/app/src/main/res/layout/fragment_user.xml
+++ b/android/app/src/main/res/layout/fragment_user.xml
@@ -4,10 +4,14 @@
     android:layout_height="match_parent"
     tools:context="nav.UserFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:text="사용자 프로필 페이지"
+        android:textSize="18sp"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:layout_gravity="center"/>
 
 </FrameLayout>
