--- a/android/app/src/main/res/layout/fragment_map.xml
+++ b/android/app/src/main/res/layout/fragment_map.xml
@@ -4,10 +4,13 @@
     android:layout_height="match_parent"
     tools:context="nav.MapFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:text="지도 보기 페이지"
+        android:textSize="18sp"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:layout_gravity="center"/>
 
 </FrameLayout>
