[🎨 DESIGN] 지도 병원 상세 정보 디자인 틀 생성

--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -140,4 +140,5 @@
     <color name="dark_blue">#00008B</color>
     <color name="navy">#000080</color>
     <color name="black">#000000</color>
+    <color name="blue_gray">#A9B7C8</color>
 </resources>
