--- a/android/app/src/main/res/layout/fragment_map.xml
+++ b/android/app/src/main/res/layout/fragment_map.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 android:id="@+id/main"
@@ -45,6 +45,14 @@ tools:context="nav.MapFragment">
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginRight="10dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </FrameLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- Bottom Sheet -->
+    <LinearLayout
+        android:id="@+id/bottom_sheet"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:orientation="vertical"
+        android:background="@drawable/rounded_top_corners"
+        android:padding="16dp"
+        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"/>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
