--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -22,4 +22,11 @@
         android:layout_height="wrap_content"
         app:menu="@menu/bottom_nav"/>
 
+    <!-- 버튼 -->
+<!--    <Button-->
+<!--        android:id="@+id/btnGoCategory"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="카테고리로 이동"/>-->
+
 </LinearLayout>
