--- a/android/app/src/main/res/layout/bottom_sheet_hospital.xml
+++ b/android/app/src/main/res/layout/bottom_sheet_hospital.xml
@@ -32,7 +32,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/hospitalInfo"
+            android:id="@+id/hospitalAddr"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
