[📚 DOCS] Spinner 수정

--- a/android/app/src/main/res/layout/activity_insert.xml
+++ b/android/app/src/main/res/layout/activity_insert.xml
@@ -43,7 +43,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-
             app:boxCornerRadiusTopStart="12dp"
             app:boxCornerRadiusTopEnd="12dp"
             app:boxCornerRadiusBottomStart="12dp"
@@ -52,7 +51,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
 
-            <com.google.android.material.textfield.TextInputEditText
+
+        <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
@@ -181,11 +181,11 @@
             <Spinner
                 android:id="@+id/spYear"
                 android:layout_width="0dp"
-
-                android:layout_height="wrap_content"
+                android:layout_height="48dp"
                 android:layout_weight="1"
-
-                />
+                android:spinnerMode="dropdown"
+                android:paddingStart="12dp"
+                android:paddingEnd="12dp"/>
 
             <Spinner
                 android:id="@+id/spMonth"
