[⚙️ FEATURE] .so 설정 및 지도 불러오기 로직 수정

--- a/android/app/src/main/res/layout/fragment_map.xml
+++ b/android/app/src/main/res/layout/fragment_map.xml
@@ -9,7 +9,7 @@ tools:context="nav.MapFragment">
 
 <!--  나중에 지도로 가져오게 변경 -->
 <com.kakao.vectormap.MapView
-    android:id="@+id/mapView"
+    android:id="@+id/map_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
