--- a/android/app/src/main/res/layout/fragment_edit_profile_dialog.xml
+++ b/android/app/src/main/res/layout/fragment_edit_profile_dialog.xml
@@ -42,8 +42,7 @@
             android:id="@+id/spinner_year"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@drawable/spinner_background" />
+            android:layout_weight="1" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -56,8 +55,7 @@
             android:id="@+id/spinner_month"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@drawable/spinner_background" />
+            android:layout_weight="1" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -70,8 +68,7 @@
             android:id="@+id/spinner_day"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@drawable/spinner_background" />
+            android:layout_weight="1"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -95,7 +92,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:background="@drawable/spinner_background"
         app:layout_constraintTop_toBottomOf="@id/tv_blood_type"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
