[🔧 LITTLE_FIXED] 불필요한 줄바꿈 제거

--- a/android/app/src/main/res/layout/fragment_profile.xml
+++ b/android/app/src/main/res/layout/fragment_profile.xml
@@ -23,8 +23,9 @@
                 android:id="@+id/profile_image"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
-                android:src="@drawable/ic_profile_placeholder"
-                android:contentDescription="프로필 사진" />
+                android:src="@drawable/ic_user"
+                />
+<!--                android:contentDescription="프로필 사진" -->
 
             <Button
                 android:id="@+id/btn_upload_photo"
@@ -32,13 +33,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:text="프로필 수정" />
-
-
-
-
         </LinearLayout>
-
-
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -46,10 +41,6 @@
             android:layout_marginTop="16dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">
-
-
-
-
 
             <TextView
                 android:id="@+id/tv_name"
@@ -60,17 +51,14 @@
                 android:background="@drawable/rounded_background"
                 android:padding="8dp"
                 />
-
         </LinearLayout>
-
-
-
         <Button
             android:id="@+id/btn_profile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="개인정보 수정" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -99,8 +87,6 @@
                 android:layout_weight="1"
                 android:text="비상연락처"
                 android:textSize="16sp" />
-
-
         </LinearLayout>
 
         <LinearLayout
@@ -109,9 +95,6 @@
             android:layout_marginTop="8dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">
-
-
-
             <EditText
                 android:id="@+id/et_dob"
                 android:layout_width="0dp"
@@ -156,11 +139,7 @@
                 android:inputType="phone"
                 android:background="@drawable/rounded_background"
                 android:padding="8dp" />
-
-
         </LinearLayout>
-
-
 
         <Button
             android:id="@+id/btn_allergy"
@@ -255,8 +234,5 @@
                     android:background="@drawable/rounded_background" />
             </TableRow>
         </TableLayout>
-
-
-
     </LinearLayout>
 </ScrollView>
