[⚙️ FEAT] 회원가입 시 DB저장되기 전 팝업 추가 후 DB저장기능 구현

--- a/android/app/src/main/res/layout/activity_agree_term.xml
+++ b/android/app/src/main/res/layout/activity_agree_term.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/main_agree"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:fillViewport="true"
-    android:padding="24dp"
-    android:id="@+id/main_agree">
+    android:padding="24dp">
 
     <LinearLayout
         android:layout_width="match_parent"
