[⚙️ FEAT] 이름 입력창에 한글 입력 추가 [🔧 LITTLE_FIX] 한글 입력을 위한 input내용 추가

--- a/android/app/src/main/res/layout/activity_insert.xml
+++ b/android/app/src/main/res/layout/activity_insert.xml
@@ -57,7 +57,9 @@
                 android:id="@+id/etName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="이름 입력" />
+                android:hint="이름 입력"
+                android:inputType="textPersonName"
+                android:imeOptions="actionNext" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
