--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="purple_700">#3700B3</color>
     <color name="teal_700">#018786</color>   <!-- 초록 느낌 -->
     <color name="white">#FFFFFF</color>
     <color name="ivory">#FFFFF0</color>
