--- a/android/app/src/main/res/layout/fragment_edit_profile_dialog.xml
+++ b/android/app/src/main/res/layout/fragment_edit_profile_dialog.xml
@@ -97,12 +97,46 @@
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
+        android:id="@+id/tv_gender"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="성별"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@id/spinner_blood_type"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <RadioGroup
+        android:id="@+id/radio_group_gender"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_gender"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <RadioButton
+            android:id="@+id/radio_male"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="남성" />
+
+        <RadioButton
+            android:id="@+id/radio_female"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="여성" />
+
+    </RadioGroup>
+    <TextView
         android:id="@+id/tv_emergency_contact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="비상 연락처"
         android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@id/spinner_blood_type"
+        app:layout_constraintTop_toBottomOf="@id/radio_group_gender"
         app:layout_constraintStart_toStartOf="parent" />
 
     <LinearLayout
