--- a/android/app/src/main/res/layout/fragment_profile.xml
+++ b/android/app/src/main/res/layout/fragment_profile.xml
@@ -25,8 +25,6 @@
                 android:layout_height="120dp"
                 android:src="@drawable/ic_user"
                 />
-<!--                android:contentDescription="프로필 사진" -->
-
             <Button
                 android:id="@+id/btn_upload_photo"
                 android:layout_width="match_parent"
@@ -137,6 +135,22 @@
                 android:layout_weight="3"
                 android:hint="혈액형을 등록해주세요"
                 android:inputType="phone"
+                android:background="@drawable/rounded_background"
+                android:padding="8dp" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginStart="16dp"
+                android:text="성별"
+                android:textSize="16sp" />
+            <EditText
+                android:id="@+id/et_gender"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:hint="성별을 등록해주세요"
                 android:background="@drawable/rounded_background"
                 android:padding="8dp" />
         </LinearLayout>
