--- a/android/app/src/main/res/layout/fragment_allergy_dialog.xml
+++ b/android/app/src/main/res/layout/fragment_allergy_dialog.xml
@@ -72,30 +72,47 @@
         app:layout_constraintTop_toBottomOf="@id/grid_food_allergies"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <EditText
+        android:id="@+id/et_drug_side_effect"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:hint="아목시실린"
+        android:background="@drawable/rounded_background"
+        android:padding="8dp"
+        android:inputType="text"
+        app:layout_constraintTop_toBottomOf="@id/tv_drug_side_effect"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <LinearLayout
-        android:id="@+id/layout_drug_side_effect"
+        android:id="@+id/layout_drug_buttons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:gravity="center"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_drug_side_effect">
-
-        <EditText
-            android:id="@+id/et_drug_side_effect"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="아목시실린"
-            android:background="@drawable/rounded_background"
-            android:padding="8dp"
-            android:inputType="text"/>
+        app:layout_constraintTop_toBottomOf="@id/et_drug_side_effect"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <Button
             android:id="@+id/btn_add_drug_side_effect"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="등록" />
+            android:layout_weight="1"
+            android:text="등록"
+            android:textSize="12sp"
+            android:layout_marginEnd="4dp" />
+
+        <Button
+            android:id="@+id/btn_delete_drug_side_effect"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="삭제"
+            android:textSize="12sp"
+            android:layout_marginStart="4dp" />
     </LinearLayout>
 
     <TextView
@@ -105,7 +122,7 @@
         android:layout_marginTop="8dp"
         android:text="현재 등록된 정보가 없습니다."
         android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@id/layout_drug_side_effect"
+        app:layout_constraintTop_toBottomOf="@id/layout_drug_buttons"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
