--- a/android/app/src/main/res/layout/activity_delete_users.xml
+++ b/android/app/src/main/res/layout/activity_delete_users.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/main_delete"
     android:orientation="vertical"
     android:padding="24dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/main_delete">
+    android:layout_height="match_parent">
 
     <TextView
-        android:text="회원 탈퇴 시, 프로필/설정 데이터가 영구 삭제됩니다."
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:text="회원 탈퇴 시, 프로필/설정 데이터가 영구 삭제됩니다." />
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
@@ -22,7 +21,8 @@
         android:id="@+id/etPw"
         android:inputType="textPassword"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
+
     </com.google.android.material.textfield.TextInputLayout>
 
     <CheckBox
@@ -30,12 +30,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="안내를 확인했습니다."
-        android:layout_marginTop="8dp"/>
+        android:layout_marginTop="8dp" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnDelete"
         android:text="회원 탈퇴하기"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"/>
+        android:layout_marginTop="24dp" />
 </LinearLayout>
