[ 🎨 DESIGN] 비밀번호 변경 UI 구현 [🔧 LITTLE_FIX] 설정에서 비밀번호 변경 창 버튼

--- a/android/app/src/main/res/layout/activity_settings.xml
+++ b/android/app/src/main/res/layout/activity_settings.xml
@@ -36,10 +36,10 @@
             android:layout_width="match_parent" android:layout_height="1dp"
             android:layout_marginVertical="20dp" android:background="#DDDDDD"/>
 
-        <!--<com.google.android.material.button.MaterialButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/btnChangePw"
             android:layout_width="match_parent" android:layout_height="wrap_content"
-            android:text="비밀번호 변경" /> -->
+            android:text="비밀번호 변경" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnDeleteAccount"
