[⚙️ FEAT] 검색어 입력시 RecyclerView에 리스트 목록 생성

--- a/android/app/src/main/res/layout/fragment_map.xml
+++ b/android/app/src/main/res/layout/fragment_map.xml
@@ -59,6 +59,7 @@ tools:context="nav.MapFragment">
             android:layout_marginHorizontal="20dp"
             android:background="@color/white"
             android:padding="8dp"
+            android:visibility="gone"
             app:layout_constraintTop_toBottomOf="@+id/search_container" />
     </androidx.constraintlayout.widget.ConstraintLayout>
     <!--  검색 결과 리스트  -->
